updated: (.htaccess) change comments; small updates;

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
 #дана умова означає якщо запит йде на існуючий файл, тоді показти його
 # і наступне правило не виконується, якщо ж такого файлу не існує виконати наступне правило
-# і нас перекине на index.php
+# і нас перекине на index_ctrl.php
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule (.*) index.php?$1 [L,QSA]
